--- a/build.gradle
+++ b/build.gradle
@@ -14,14 +14,38 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	set('springCloudVersion', "2021.0.7")
+}
+
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	implementation 'org.springframework.retry:spring-retry'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
 }
 
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+}
+
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+
+tasks.named('compileJava') {
+	inputs.files(tasks.named('processResources'))
+}
 tasks.named('test') {
 	useJUnitPlatform()
 }
@@ -30,4 +54,8 @@ tasks.named('bootBuildImage') {
 		builder = "ghcr.io/thomasvitale/java-builder-arm64"
 	}
 	builder = "paketobuildpacks/builder:tiny"
+}
+
+bootRun {
+	systemProperty 'spring.profiles.active', 'testdata'
 }
